backend/root/records/6/compile_err.txt
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/6/6.code:2:1: error: ‘fasdfasdfasdfsd’ does not name a type
 fasdfasdfasdfsd
 ^~~~~~~~~~~~~~~
